--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Blog Richard</title>
+    <title>Blog Richard-Lipa</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="css/blog.css">
     
@@ -40,7 +40,7 @@
               <p>
               <img src="https://lh3.googleusercontent.com/qCtODDtFTLEcjeIs_of6jrgYCdsFWMl7-hEtCVoGaX6ozfmsThGKiQ93wJmFNqdTWplxIp_mTy2fnZRHhKYVdCo93oyS0D7f8lZaqc3JmphAOK1PH3KfKrsrKcG3KWaDHheJJi0yZxqiR-hNcNuha2txEWk1Xmnbs5JhVs0fPQw3_aM97MTQEzXGNMov-VNem16rDSTPtr4zcGkLU18zW7UYK4FtqpnAjYFR_K5Mw88pUOT7he7Swa-Gs28cGVQCkjGzh6CqTey2zlV2ev7YxqcHQUqKnHdWZBrmDPb4hJLHtnyKMsFyupxFH7eJnqu90Nwwx-EZU_So23xvquVCTHIwseFQvWN3LR5DdwhFRI_L6YKlDqPjGTi8vYEdKoAGvOJjnAb1qM0EXArtRBLaECimruiWQJqdghsk5ubV89Z0179vwMKQQ4MPi3klJ82se53wGK45SswNuqDuYbHh78nf6jOC6ys10IEHKQJE1_gAIJLYTBC6mYS_gKiJw38dfUh-fyuqQIVGnATY_2Hw-i6KK8f6lw3LrnPzmJ7CrOUENNzF4pc59Kq5oVMCtCyf1kqL3kdAGpmEsUtfaOpbptS31tJQW9l6ZRM4n_kyMBUZEnX7=w883-h662-no" alt="avatar" width="35" height="35"><span>Richard Lipa</span>
               </p>
-              <span>Junio 5 2017</span>
+              <span>Mayo 5 2017</span>
           </div>
       </div>
       </article>
