--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <a href=" https://rlipac.github.io/Mi-invie/">
           
-                 <img src="i" alt="rlipac31@gmail.com" >  
+                 <img src="images/logo.png" alt="rlipac31@gmail.com" >  
                 
      </a>
    
